<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPlantPackage.PlantsEdit">

    <TextView
        android:layout_width="228dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="688dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/idThumbnail"
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_marginBottom="16dp"
            android:background="#2d2d2d"
            android:contentDescription="@string/plant_name"
            android:scaleType="centerCrop" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="64dp"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/plant_name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idNickName"
                    android:layout_width="235dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="20dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/type"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/idSpinner"
                    android:layout_width="125dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="20sp"></Spinner>

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/bSave"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16sp"
            android:onClick="save"
            android:text="@string/save" />

        <Button
            android:id="@+id/bDelete"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:onClick="delete"
            android:text="@string/delete" />
    </LinearLayout>
</LinearLayout>