<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPlantPackage.PlantsEdit">

    <ImageView
        android:id="@+id/idPlantThumbnail"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:background="#2d2d2d"
        android:contentDescription="@string/plant_name"
        android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/idName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/plant_name"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:layout_marginLeft="32sp"
                    android:layout_marginTop="16dp"
                    android:textSize="20sp"
                    android:text="@string/type" />

                <TextView
                    android:id="@+id/tfType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:layout_marginLeft="32sp"
                    android:layout_marginTop="16dp"
                    android:textSize="20sp"
                    android:text="@string/type" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:layout_marginLeft="32sp"
                    android:layout_marginTop="16dp"
                    android:textSize="20sp"
                    android:text="Health" />

                <TextView
                    android:id="@+id/idHealth"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:layout_marginLeft="32sp"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:text="@string/health_format" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:layout_marginLeft="32sp"
                    android:layout_marginTop="16dp"
                    android:textSize="20sp"
                    android:text="@string/next_water" />

                <TextView
                    android:id="@+id/idNextWater"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:layout_marginLeft="32sp"
                    android:layout_marginTop="16dp"
                    android:textSize="20sp"
                    android:text="@string/next_water_format" />
            </TableRow>
        </TableLayout>

    <Button
        android:id="@+id/bEdit"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:onClick="edit"
        android:text="@string/edit"
        android:textSize="20sp" />
</LinearLayout>