<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserPlantPackage.SensorsEnvironment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="394dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/environment"
        android:textSize="32sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="407dp"
        android:layout_height="655dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/ivTemperature"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:srcCompat="@android:color/transparent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/idCurrentTemperature"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32sp"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="16dp"
                android:text="@string/temperature"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/idTemperature"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/temperature"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/idPreferredTemperature"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/ivHumidity"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:srcCompat="@android:color/transparent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/idCurrentHumidity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32sp"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="16dp"
                android:text="@string/humidity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/idHumidity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/humidity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/idPreferredHumidity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/ivLight"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:srcCompat="@android:color/transparent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/idCurrentLight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32sp"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="16dp"
                android:text="@string/light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/idLight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/idPreferredLight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>